# Electrum

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TEST  cmake_build_kits.json  cmake_build_types.json  compile_commands.json  create-files.py  neovim.json  rename-plugin.py
Assets/: ElectrumKnobLayout.ai
Audio/: AudioBasics.h  AudioUtil.h  BigSynthSynthesizer.cpp  BigSynthSynthesizer.h  ElectrumEngine.cpp  ElectrumEngine.h  ElectrumSynthesizer.cpp  ElectrumSynthesizer.h  ElectrumVoice.cpp  ElectrumVoice.h
Audio/DSP/: FundamentalFinder.cpp  FundamentalFinder.h
Audio/Generators/: Wavetable.cpp  Wavetable.h  WavetableOscillator.cpp  WavetableOscillator.h
Audio/Modulators/: AHDSR.cpp  AHDSR.h  AHDSREnvelope.cpp  AHDSREnvelope.h  Envelope.h  LFO.cpp  LFO.h  Oscillator.h  Perlin.cpp  Perlin.h  VoiceLFO.cpp  VoiceLFO.h
Audio/Processors/: FilterProcessor.cpp  FilterProcessor.h  ProcessorBase.cpp  ProcessorBase.h  Saturation.cpp  Saturation.h
Core/: CustomJuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
GUI/: Color.h  ElectrumEditor.cpp  ElectrumEditor.h  ElectrumLookAndFeel.cpp  ElectrumLookAndFeel.h  EnvelopeEditor.cpp  EnvelopeEditor.h  Fonts.h  GUIUtil.h  ModWheelSource.h  OscillatorEditor.cpp  OscillatorEditor.h
GUI/GeneratorPanel/: BitmapWavetableGraph.cpp  BitmapWavetableGraph.h  OscillatorEditor.cpp  OscillatorEditor.h  WavetableGraph.cpp  WavetableGraph.h
GUI/HeaderPanel/: HeaderPanel.cpp  HeaderPanel.h  PatchSelectorPanel.cpp  PatchSelectorPanel.h
GUI/Modal/: PatchOpenModal.cpp  PatchOpenModal.h
GUI/Modulation/: DepthSlider.cpp  DepthSlider.h  DepthSliderStack.cpp  DepthSliderStack.h  LabeledMDS.cpp  LabeledMDS.h  LabeledSPS.cpp  LabeledSPS.h  ModulationDestSlider.cpp  ModulationDestSlider.h  ModulationSourceComponent.cpp  ModulationSourceComponent.h  SourceParamSlider.cpp  SourceParamSlider.h  WedgeButton.cpp  WedgeButton.h
GUI/ModulatorPanel/: EnvelopeGraph.cpp  EnvelopeGraph.h  EnvelopeLevelComponent.cpp  EnvelopeLevelComponent.h  EnvelopePanel.cpp  EnvelopePanel.h  EnvelopeTabbedComponent.cpp  EnvelopeTabbedComponent.h  LFOGraph.cpp  LFOGraph.h  LFOTabbedComponent.cpp  LFOTabbedComponent.h  ModMacroPanel.cpp  ModMacroPanel.h  ModWheelSource.h  PerlinGraph.cpp  PerlinGraph.h  PerlinPanel.cpp  PerlinPanel.h  PitchWheelSource.h
GUI/ProcessorPanel/: FilterPanel.cpp  FilterPanel.h  ProcessorPanel.cpp  ProcessorPanel.h  SaturationPanel.cpp  SaturationPanel.h
GUI/Utility/: DragPoint.cpp  DragPoint.h  GLUtil.h  GUIUtil.h  VectorSymbols.cpp  VectorSymbols.h  WedgeButton.cpp  WedgeButton.h
Parameters/: AudioSystem.cpp  AudioSystem.h  CircularBuffer.h  DLog.h  ElectrumAudioData.cpp  ElectrumAudioData.h  ElectrumValueTree.cpp  ElectrumValueTree.h  ElectrumVoicesState.cpp  ElectrumVoicesState.h  FileManager.cpp  FileManager.h  Identifiers.h  MathUtil.h  ParameterWatcher.h  StringUtil.h
Shaders/: WavetableGraphFragment.glsl  WavetableGraphVertex.glsl
Tests/: MainBenchmarks.cpp  MainTests.cpp  TestUtil.cpp  TestUtil.h
plugin/: CMakeLists.txt
plugin/include/Electrum/: Common.h  Identifiers.h  PluginEditor.h  PluginProcessor.h
plugin/include/Electrum/Audio/: AudioUtil.h  HarmonicSeries.h  Wavetable.h
plugin/include/Electrum/Audio/Filters/: Ladder.h  MovingAverage.h  RollingRMS.h  TPTFilter.h  VoiceFilter.h
plugin/include/Electrum/Audio/Generator/: Oscillator.h
plugin/include/Electrum/Audio/Modulator/: AHDSR.h  LFO.h  Perlin.h
plugin/include/Electrum/Audio/Synth/: Engine.h  Voice.h
plugin/include/Electrum/GUI/: ElectrumEditor.h  GUITypedefs.h  KeyboardView.h  LayoutHelpers.h  PatchBrowser.h
plugin/include/Electrum/GUI/LFOEditor/: LFOEdit.h
plugin/include/Electrum/GUI/LookAndFeel/: BinaryGraphics.h  Color.h  ElectrumLnF.h  Fonts.h
plugin/include/Electrum/GUI/Modulation/: DepthSliderStack.h  DestinationSlider.h  ModContextComponent.h  ModSourceButton.h  ModSourceComponent.h  WedgeButton.h
plugin/include/Electrum/GUI/ModulatorPanel/: EnvelopeComponent.h  EnvelopeGraph.h  LFOComponent.h  LevelSourceComponent.h  MacroModSources.h  PerlinPanel.h
plugin/include/Electrum/GUI/ProcessPanel/: FilterPanel.h
plugin/include/Electrum/GUI/Util/: BeatSyncToggle.h  ClickableComponent.h  DragPoint.h  ModalParent.h  PowerButton.h  ScalableViewport.h
plugin/include/Electrum/GUI/WaveEditor/: EditValueTree.h  FFTView.h  FrameWarp.h  PointEditor.h  TimeView.h  WaveEdiorContext.h  WaveEditor.h  WaveMenu.h  WaveThumbnail.h
plugin/include/Electrum/GUI/Wavetable/: Mat3x3.h  OscillatorPanel.h  WavetableGraph.h
plugin/include/Electrum/Shared/: CommonAudioData.h  ElectrumState.h  FileSystem.h  GraphingData.h  PointwiseWave.h
plugin/include/YourPluginName/: Common.h  Identifiers.h  PluginEditor.h  PluginProcessor.h
plugin/source/: AHDSR.cpp  AudioUtil.cpp  BeatSyncToggle.cpp  BinaryGraphics.cpp  Color.cpp  Common.cpp  DepthSliderStack.cpp  DestinationSlider.cpp  DragPoint.cpp  EditValueTree.cpp  ElectrumEditor.cpp  ElectrumLnF.cpp  ElectrumState.cpp  Engine.cpp  EnvelopeComponent.cpp  EnvelopeGraph.cpp  FFTView.cpp  FileSystem.cpp  FilterPanel.cpp  Fonts.cpp  FrameWarp.cpp  GraphingData.cpp  HarmonicSeries.cpp  Identifiers.cpp  KeyboardView.cpp  LFO.cpp  LFOComponent.cpp  LFOEdit.cpp  Ladder.cpp  LayoutHelpers.cpp  LevelSourceComponent.cpp  MacroModSources.cpp  Mat3x3.cpp  ModContextComponent.cpp  ModSourceButton.cpp  ModSourceComponent.cpp  ModalParent.cpp  MovingAverage.cpp  Oscillator.cpp  OscillatorPanel.cpp  (+20 more)
test/source/: AudioProcessorTest.cpp
